--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.ComputerScienceProject"
         tools:targetApi="31">
         <activity
-            android:name=".LeaderboardActivity"
+            android:name="UserStats.LeaderboardActivity"
             android:exported="false" />
         <activity
-            android:name=".StatsActivity"
+            android:name="UserStats.StatsActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name="UserAuth.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name="UserAuth.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,13 +37,13 @@
             android:exported="true" />
 
         <activity
-            android:name=".SettingsActivity"
+            android:name="Settings.SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".CustomDialog"
+            android:name="GameClasses.CustomDialog"
             android:exported="false" />
         <activity
-            android:name=".GameActivity"
+            android:name="GameClasses.GameActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
